Go/_k8s/network_policy/DSLAppService.yaml
apiVersion: v1
kind: Service
metadata:
  name: dslapp
  labels:
    app: dslapp
spec:
  selector:
    app: dslapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
