Go/_k8s/network_policy/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dslapp
spec:
  host: dslapp
  subsets:
  - name: primary
    labels:
      version: primary
  - name: secondary
    labels:
      version: secondary
