Go/_k8s/network_policy/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dslapp
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: dslapp
        subset: primary
      weight: 80
    - destination:
        host: dslapp
        subset: secondary
      weight: 20
